[project]
name = "mlds_montecarlo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jhumci", email = "julian.huber@mci.edu"},
]
dependencies = ["pandas>=2.2.3", "numpy>=2.2.4", "matplotlib>=3.10.1", "seaborn>=0.13.2", "scipy>=1.15.2", "ipynb>=0.5.1", "jupyterlab>=4.3.6"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
